# hpguppi_proc

./: .gitignore  README.md
coherent_beamformer/: README.md
coherent_beamformer/lib/: Makefile
coherent_beamformer/post_processing/: plot_beamformer_output_binary.py  plot_upchan_beamformer_output_binary.py  upchan_bf_verification.py
coherent_beamformer/src/: Makefile  coherent_beamformer_char_in.cu  coherent_beamformer_char_in.h  upchannelizer_beamformer.cu  upchannelizer_beamformer.h
include/: .gitignore  coherent_beamformer_char_in.h
init/: readraw_init.sh  test_script.sh
install/: README.md
post_processing/: plot_waterfall_blimpy.py
src/: Makefile.am  configure.ac  hpguppi_coherent_bf_katpoint_thread_fb.c  hpguppi_coherent_bf_thread.c  hpguppi_databuf.h  hpguppi_rawfile_input_thread.c  hpguppi_stride_input_thread.c  hpguppi_stride_input_thread_tmp.c  hpguppi_upchan_bf_thread.c  hpguppi_upchan_databuf.h
src/m4/: coherent_beamformer.m4  libtool.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4  upchannelizer_beamformer.m4
tests/: test.md  test.sh
tests/generate/: bf_recipe.jl  generate.sh  guppi_raw.py  install.md
upchannelizer/: README.md
upchannelizer/post_processing/: plot_cufft_output_binary.py  plot_cufft_output_with_fftshift.py
upchannelizer/src/: upchannelizer.cu  upchannelizer.h  upchannelizer_long.cu  upchannelizer_long.h
upchannelizer_beamformer/: README.md
upchannelizer_beamformer/post_processing/: fft_verification.py  filterbank_file_analysis.py  plot_cufft_output_with_fftshift.py  plot_upchan_beamformer_nopow_nosti.py  plot_upchan_beamformer_output_binary_py3.py  upchan_bf_verification.py
upchannelizer_beamformer/src/: Makefile  upchannelizer.cu  upchannelizer_beamformer.cu  upchannelizer_beamformer.h  upchannelizer_beamformer_main  upchannelizer_beamformer_main.c  upchannelizer_beamformer_main.cu  upchannelizer_beamformer_sm_86.cu  upchannelizer_block.cu  upchannelizer_block.h
